--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -61,7 +61,7 @@
     </div>
 
     <script>
-        const API_URL = "http://127.0.0.1:8000";
+        const API_URL = "https://trafficontrol.onrender.com";
 
         // --- Chart Setup ---
         const ctx = document.getElementById('trafficChart').getContext('2d');
