Fix undefined bug

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
         button { padding: 15px 30px; font-size: 20px; cursor: pointer; }
     </style>
     
-    <script src="snippet.js?v=2" defer></script> 
+    <script src="snippet.js" defer></script> 
 </head>
 <body>
 
