reduction in inactive timeout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,9 @@
     <div>
         <h1>🎉 HELLO WORLD</h1>
         <p>If you can read this and click the button below, you are admitted!</p>
-        <button onclick="alert('You bought a ticket!')">💰 Buy Ticket</button>
+        <button onclick="buyTicket()" style="padding:20px; font-size:20px; background:green; color:white;">
+    💰 BUY TICKET NOW
+        </button>
     </div>
 
 </body> </html>
